Add a close button.

--- a/src/partials/fontselect.html
+++ b/src/partials/fontselect.html
@@ -20,7 +20,14 @@
 
 			<!-- <select ng-model="current.sort.attr" ng-options="text.sort[a.key] for a in sortAttrs"></select> -->
 			<!-- <button ng-click="reverseSort()">{{current.sort.direction ? text.sortdir.desc : text.sortdir.asc}}</button> -->
-
+		<button
+			ng-click="toggle()"
+			class="jdfs-close"
+			>
+			<span>
+				{{text.closeButton}}
+			</span>
+		</button>
 		<jd-fontlist
 			fsid="id"
 			text="text"
