Move the close button.

--- a/src/less/fontselect.less
+++ b/src/less/fontselect.less
@@ -29,7 +29,6 @@
 }
 
 
-
 .jdfs-window {
   top: 100%;
   left: 0;
@@ -112,6 +111,13 @@
     margin: 0 0 .5em;
   }
 }
+
+.jdfs-close {
+  position: absolute;
+  right: 1em;
+  top: 1.45em;
+}
+
 
 .jdfs-filter {
   .jdfs-styles, .jdfs-providers, .jdfs-subsets {
