--- a/src/less/fontselect.less
+++ b/src/less/fontselect.less
@@ -1,4 +1,4 @@
-@import url("lesshat.less");
+@import url('../../bower_components/lesshat/build/lesshat.less');
 
 @tabBg:            #eee;
 @activeTab:           #939393;
