Make the meta informations movable inside the fontselection.

--- a/src/partials/fontselect.html
+++ b/src/partials/fontselect.html
@@ -23,6 +23,7 @@
 		<jd-fontlist
 			fsid="id"
 			text="text"
+			meta="meta"
 			current="current"
 			fonts="fonts"
 			active="active"
@@ -74,6 +75,8 @@
 					{{text.closeButton}}
 				</span>
 			</button>
+
+			<jd-meta meta="meta"></jd-meta>
 		</div>
 	</div>
 </div>
