--- a/src/partials/font.html
+++ b/src/partials/font.html
@@ -8,5 +8,7 @@
 	<label
 		ng-class="{'jdfs-active jdfs-highlight': current.font.name == font.name}"
 		for="jdfs-{{id}}-font-{{font.key}}"
-		style="font-family: {{font.stack}};">{{font.name}}</label>
+		style="font-family: {{font.stack}};">
+		{{font.name}}
+	</label>
 </li>
