--- a/src/less/fontselect.less
+++ b/src/less/fontselect.less
@@ -27,7 +27,7 @@
   width: 300px;
   height: 50px;
   position: relative;
-  .display(flex);
+  .display(inline-flex);
 
   *, *:after, *:before {
     box-sizing: border-box;
