Bringing back a library that we are using

--- a/demo/styles.less
+++ b/demo/styles.less
@@ -1,4 +1,5 @@
 @import url('lib/reset.less');
+@import url('../bower_components/lesshat/build/lesshat.less');
 
 *,*:before,*:after{
   -webkit-box-sizing: border-box;
@@ -27,6 +28,7 @@ body {
 .wrap{
   width: 100vw;
   height: 100vh;
+
 }
 header{
     padding: 3em 0;
