Changed a little Css which didn't came up in the first place

--- a/src/less/fontselect.less
+++ b/src/less/fontselect.less
@@ -33,7 +33,6 @@
     box-sizing: border-box;
   }
 
-  font-size: 16px;
   background: @bright;
 }
 
@@ -47,7 +46,6 @@
 }
 
 .jdfs-font-name{
-  font-size: 1.3em;
 }
 
 .jdfs-reset-search{
@@ -67,7 +65,7 @@
   .flex(2 1);
 }
 .jdfs-search {
-  padding: 1em;
+  padding: 0 .5em;
 }
 // ## Window
 
@@ -133,7 +131,7 @@
 .jdfs-fontpagination {
   width: 100%;
   display: block;
-  padding: .3em 0;
+  padding: .2em 0;
   margin: 0;
   bottom: 0;
 }
@@ -141,7 +139,6 @@
 // ## Footer
 
 .jdfs-footer-con{
-  font-size: .8em;
   padding: .5em 0;
 }
 .jdfs-footer{
@@ -154,6 +151,7 @@
 }
 
 .jdfs-footer-tab-toggle{
+  vertical-align: bottom;
   display: inline-block;
   padding: .5em 1em;
 }
