--- a/src/less/fontselect.less
+++ b/src/less/fontselect.less
@@ -111,7 +111,8 @@
   label {
     .display(flex);
     .align-items(center);
-    .justify-content(center);
+    .justify-content(flex-start);
+    padding-left: 1.3em;
     width: 100%;
   }
   input {
@@ -139,7 +140,7 @@
 // ## Footer
 
 .jdfs-footer-con{
-  padding: .5em 0;
+  padding: .5em;
 }
 .jdfs-footer{
   padding: .5em .5em .5em .5em;
