--- a/src/partials/meta.html
+++ b/src/partials/meta.html
@@ -8,6 +8,6 @@
 
 	<div class="jdfs-pagecon">
 		{{text.pageLabel}}
-		<span class="jdfs-page-current">{{meta.page.current + 1}}</span>/<span class="jdfs-page-count">{{meta.page.count}}</span>
+		<span class="jdfs-page-current">{{meta.page.currentAbs + 1}}</span>/<span class="jdfs-page-count">{{meta.page.count}}</span>
 	</div>
 </div>
