Added font-families to the font-styles buttons

--- a/src/less/fontselect.less
+++ b/src/less/fontselect.less
@@ -138,6 +138,18 @@
 }
 
 // ## Footer
+.jdfs-fontstyle-sansserif{
+  font-family: sans-serif;
+}
+.jdfs-fontstyle-serif{
+  font-family: serif;
+}
+.jdfs-fontstyle-display{
+  font-family: fantasy;
+}
+.jdfs-fontstyle-handwriting{
+  font-family: cursive;
+}
 
 .jdfs-footer-con{
   padding: .5em;
