refactor: use ng-if on jdfs-window
in order to initiate sub-directives only when window is shown
we can auto-load font preview whenever a jd-font directive is loaded
without the need to check if the window is shown or not

BREAKING CHANGE
 - jdFont directive will load on construction regardless if active or not

--- a/src/partials/fontselect.html
+++ b/src/partials/fontselect.html
@@ -46,7 +46,7 @@
 	{{active ? text.toggleCloseLabel : text.toggleOpenLabel}}
 </button>
 
-	<div class="jdfs-window" ng-show="active">
+	<div class="jdfs-window" ng-if="active">
 
 			<!-- <select ng-model="current.sort.attr" ng-options="text.sort[a.key] for a in sortAttrs"></select> -->
 			<!-- <button ng-click="reverseSort()">{{current.sort.direction ? text.sortdir.desc : text.sortdir.asc}}</button> -->
@@ -56,7 +56,6 @@
 			meta="meta"
 			current="current"
 			fonts="fonts"
-			active="active"
 		></jd-fontlist>
 
 
