--- a/src/partials/fontlist.html
+++ b/src/partials/fontlist.html
@@ -11,7 +11,7 @@
 			</li>
 			<li ng-if="hasCuratedFonts()" class="jdfs-fontlist-headline">{{text.curatedFontsListHeadline}}</li>
 			<li ng-if="hasCuratedFonts()" class="jdfs-fontlist-headline">{{text.allFontsListHeadline}}</li>
-			<jd-font active="active" font="font" ng-repeat="font in getFilteredFonts() | startFrom: page.current * page.size | limitTo: page.size" />
+			<jd-font current="current" font="font" ng-repeat="font in getFilteredFonts() | startFrom: page.current * page.size | limitTo: page.size" />
 		</ul>
 
 		<button
