feat(Fontlist): Use FontlistEntries instead of FilteredFonts
ref #51

--- a/src/partials/font.html
+++ b/src/partials/font.html
@@ -1,4 +1,4 @@
-<li>
+<span>
 	<input
 		type="radio"
 		ng-model="current.font"
@@ -11,4 +11,4 @@
 		style="font-family: {{font.stack}};">
 		{{font.name}}
 	</label>
-</li>
+</span>
