feat(Fontlist): adding a text type to show no result text

--- a/src/partials/fontlist-entry.html
+++ b/src/partials/fontlist-entry.html
@@ -1,4 +1,5 @@
 <li>
   <jd-font ng-if="entry.type === 'FONT'" font="entry.content"></jd-font>
   <span ng-if="entry.type === 'HEADLINE'" class="jdfs-fontlist-headline">{{entry.content}}</span>
+  <span ng-if="entry.type === 'TEXT'" class="jdfs-fontlist-text">{{entry.content}}</span>
 </li>
