--- a/src/less/fontselect.less
+++ b/src/less/fontselect.less
@@ -90,34 +90,40 @@
   background: @bright;
   padding: 0;
   margin: 0;
-  height: 330px;
   position: relative;
   color: @dark;
 
   li {
     .display(inline-flex);
-    .justify-content(center);
-    padding: 0;
     margin: 0;
     list-style-type: none;
     height: 10%;
     width: 100%;
-    border-bottom: 1px solid rgba(0,0,0,.1);
     &:last-child{
       border-bottom: none;
 
     }
   }
-  label {
-    .display(flex);
-    .align-items(center);
-    .justify-content(flex-start);
-    padding-left: 1.3em;
-    width: 100%;
-  }
+}
+
+.jdfs-fontlist-font {
+
+  .display(flex);
+  .align-items(center);
+  .justify-content(flex-start);
+  padding-left: 15px;
+  width: 100%;
+  height: 35px;
+  border-bottom: 1px solid rgba(0,0,0,.1);
   input {
     display: none;
   }
+}
+
+.jdfs-fontlist-headline {
+    background-color: @dark;
+    color: @bright;
+    padding: 1em 0 1em 15px;
 }
 
 .jdfs-fontlist-noresults{
@@ -127,6 +133,7 @@
   top: 50%;
   width: 100%;
   line-height: 0;
+  height: 150px;
 }
 
 .jdfs-fontpagination {
